trying to fix portland banner on mobile

--- a/styles.css
+++ b/styles.css
@@ -1060,10 +1060,9 @@ body {
 }
 
 .portland-img {
-  width: 100%;
+  width: 100vw;
   position: relative;
   left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
+  transform: translateX(-50%);
+  object-fit: cover;
 }
